sandbox/output
StringCalculatorTest.java:71: error: method test_add_with_new_line_v3() is already defined in class StringCalculatorTest
    public void test_add_with_new_line_v3(){
                ^
1 error
